--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
         body {
             font-family: 'Inter', sans-serif;
             background-color: #f5f5f4;
+            overflow: hidden;
+}
         }
         h1 {
             font-family: 'Bungee Outline', Sans-Serif;
